# caas

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  bump_version.py  docker-compose.yml  main.py  pyproject.toml  temp_write_conftest
.githooks/: pre-commit
.github/instructions/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml
app/: __init__.py  api.py  config.py  converter.py  error_handler.py  errors.py  exceptions.py  ip_helpers.py  main.py  metrics.py  middleware.py  ocr.py  rate_limiter.py  redis_client.py  streaming.py  task_manager.py  validation.py  zip_utils.py
app/converters/: __init__.py  base.py  docx.py  html.py  odp.py  ods.py  odt.py  pdf.py  pptx.py  xlsx.py
app/models/: response.py
app/routes/: __init__.py  batch.py  convert.py  health.py  metrics.py
app/static/: app.js  style.css
app/storage/: __init__.py  base.py  memory.py  redis.py
app/templates/: form.html  metrics.html
examples/: README.md
examples/authelia/: .env.example  README.md  docker-compose.yml
examples/authelia/authelia/: config.yml  users_database.yml
examples/authelia/nginx/: nginx.conf
examples/authelia/secrets/: README.md
examples/haproxy-letsencrypt/: .env.example  README.md  docker-compose.yml  haproxy.cfg
examples/n8n/: README.md  caas-workflow-async.json  caas-workflow-batch.json  caas-workflow-example.json  caas-workflow-streaming.json
examples/nginx-letsencrypt/: .env.example  README.md  docker-compose.yml  nginx.conf
examples/prometheus/: README.md  docker-compose.yml  prometheus.yml
tests/: conftest.py  test_api.py  test_batch.py  test_benchmarks.py  test_config.py  test_converter.py  test_docker.py  test_docx.py  test_endpoints.py  test_exceptions.py  test_health.py  test_html.py  test_main.py  test_metrics.py  test_odp.py  test_ods.py  test_odt.py  test_pdf.py  test_pptx.py  test_rate_limiter.py  test_redis_client.py  test_security.py  test_storage_memory.py  test_storage_redis.py  test_storage_switching.py  test_streaming.py  test_task_manager.py  test_utils.py  test_validation.py  test_xlsx.py  test_zip_utils.py
tests/fixtures/: __init__.py  batch.py  common.py  docx.py  expected_outputs.py  html.py  odp.py  ods.py  odt.py  pdf.py  pptx.py  xlsx.py
