[project]
name = "caas"
version = "1.0-beta.22"
description = "Conversion-as-a-Service: Convert PDF, DOCX, ODT, ODP, XLSX, ODS, PPTX, and HTML to Markdown via a REST API. 100% in-memory (zero-disk I/O), with OCR fallback, streaming (SSE), async/batch processing, and security hardening — optimized for LLM pipelines."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Florent PELCAT" }
]
keywords = ["pdf", "docx", "odp", "markdown", "conversion", "api", "fastapi", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pdfplumber>=0.11.9,<1.0.0",
    "pypdfium2>=4.0.0,<6.0.0",
    "mammoth>=1.8.0,<2.0.0",
    "odfpy>=1.4.0,<2.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "pytesseract>=0.3.10,<1.0.0",
    "Pillow>=10.0.0,<13.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "gunicorn>=26.0.0,<27.0.0",
    "python-pptx>=0.6.21,<1.0.0",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0,<6.0.0",
]

dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "types-reportlab>=4.0.0,<5.0.0",
    "ruff>=0.15.16,<2.0.0",
    "mypy>=1.10.0,<3.0.0",
    "pre-commit>=3.7.0,<6.0.0",
    "fakeredis>=2.36.1,<3.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pdfplumber.*", "pypdfium2.*", "mammoth.*", "pytesseract.*", "PIL.*", "openpyxl.*", "pptx.*", "odf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "docker: marks tests as requiring Docker (deselect with '-m \"not docker\"')",
    "redis: marks tests as requiring Redis (uses fakeredis; deselect with '-m \"not redis\"')",
]

[project.urls]
Homepage = "https://github.com/digifac/caas"
Repository = "https://github.com/digifac/caas"
Documentation = "https://github.com/digifac/caas#readme"
Issues = "https://github.com/digifac/caas/issues"

[project.scripts]
caas = "main:main"
bump-version = "bump_version:main"


[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
